--- a/index.html
+++ b/index.html
@@ -40,10 +40,9 @@
                 </div>
                 <div class="hamburger__menu slide-top">
                     <ul class="hamburger__menu-list">
-                        <li><a href="#1">Projects</a></li>
-                        <li><a href="">Contact</a></li>
-                        <li><a href="">What i do</a></li>
-                        <li><a href="">Comments</a></li>
+                        <li><a href="#1" class="hamburguer_option">Projects</a></li>
+                        <li><a href="#3" class="hamburguer_option">Contact</a></li>
+                        <li><a href="#2" class="hamburguer_option">What i do</a></li>                        
                     </ul>
                 </div>
 
@@ -93,7 +92,7 @@
                     <p>cryptosearch is an app built with React js that lets you search any crypto currency in real time, it uses the coingecko api to track the information.</p>
                     <p class="tags">#React #React-router-dom #Coingecko Api #tailwind #dark theme</p>
                     <div class="relative">
-                        <p>View Project</p>
+                        <a href="https://carlosmet.github.io/cryptosearch/" target="_blank" style="text-decoration: none;color: black;">View Project</a>
                         <i class="fa-solid fa-arrow-right-long"></i>
                         <div class="absolute">                            
                         </div>
@@ -103,7 +102,7 @@
 
             <div class="projects__spotify">
                 <div class="projects__spotify--img">
-                    <img src="images/Removal-250.png" alt="spotifysearch">
+                    <img src="images/Mockoupcompu.png" alt="spotifysearch">
                 </div>
                 <div class="projects__spotify__description">
                     <h3 class="projects__spotify--title">Daily Components (Landing page)</h3>
@@ -203,8 +202,8 @@
                     </div>
                     <div class="contact__right--btn">
                         <div>
-                            <i class="fa-brands fa-github fa-2xl"></i>
-                            <i class="fa-brands fa-linkedin fa-2xl"></i>                            
+                            <a href="https://github.com/CarlosMet" target="_blank"><i class="fa-brands fa-github fa-2xl"></i></a>
+                            <a href="https://www.linkedin.com/in/carlos-metaute-080259265/" target="_blank"><i class="fa-brands fa-linkedin fa-2xl"></i></a>                            
                         </div>
                        
                         <!-- <button>Next</button> -->
@@ -288,9 +287,9 @@
             <h4>CARLOS METAUTE.</h4>
             <P class="footer__description">Thanks for visiting my page, this was a brief description about me and my work, if you want to get to know me better, take a look of my social networks</P>
             <div class="footer__social">
-                <a class="glowing-text">Linkedin</a>
-                <a class="glowing-text">Github</a>
-                <a class="glowing-text">Facebook</a>
+                <a class="glowing-text" style="text-decoration: none;" href="https://www.linkedin.com/in/carlos-metaute-080259265/" target="_blank">Linkedin</a>
+                <a class="glowing-text" href="https://github.com/CarlosMet" target="_blank" style="text-decoration: none;">Github</a>
+                <a class="glowing-text" style="text-decoration: none;" href="https://www.facebook.com/Carlopss" target="_blank">Facebook</a>
             </div>
         </footer>
     </section>
