--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
         <div>
             <div class="projects__crypto">
                 <div class="projects__crypto--img">
-                    <img src="images/cryptoframe-removebg-preview.png" alt="cryptosearch">
+                    <img src="images/New Macbook Pro Mockup Front View.png" alt="cryptosearch">
                 </div>
                 <div class="projects__crypto__description">
-                    <h3 class="projects__crypto--title">cryptosearch</h3>
-                    <p>cryptosearch is an app built with React js that lets you search any crypto currency in real time, it uses the coingecko api to track the information.</p>
-                    <p class="tags">#React #React-router-dom #Coingecko Api #tailwind #dark theme</p>
+                    <h3 class="projects__crypto--title">Filmscope</h3>
+                    <p>Filmscope is an app that lets the user search movies, watch movies trailers and read reviews. this app uses the api from the movie data base </p>
+                    <p class="tags">#React #React-router-dom #Api #tailwind #dark theme</p>
                     <div class="relative">
-                        <a href="https://carlosmet.github.io/cryptosearch/" target="_blank" style="text-decoration: none;color: black;">View Project</a>
+                        <a href="https://carlosmet.github.io/filmscope/" target="_blank" style="text-decoration: none;color: black;">View Project</a>
                         <i class="fa-solid fa-arrow-right-long"></i>
                         <div class="absolute">                            
                         </div>
@@ -102,14 +102,14 @@
 
             <div class="projects__spotify">
                 <div class="projects__spotify--img">
-                    <img src="images/Mockoupcompu.png" alt="spotifysearch">
+                    <img src="images/store-removebg-preview.png" alt="spotifysearch">
                 </div>
                 <div class="projects__spotify__description">
-                    <h3 class="projects__spotify--title">Daily Components (Landing page)</h3>
-                    <p>This is a landing page for a project called daily components that i've been working on to give pre-built and pre-designed components for everyone</p>
-                    <p class="tags">#React #tailwind #git #gh-pages</p>
+                    <h3 class="projects__spotify--title">Uniform Store</h3>
+                    <p>This is my first freelance project that I'm currently maintaining and actively working on</p>
+                    <p class="tags">#Next js #tailwind </p>
                     <div class="relative">
-                        <a href="https://carlosmet.github.io/dailyc/" target="_blank" style="text-decoration: none;color: black;">View Project</a>
+                        <a href="https://lorestore-carlosmet.vercel.app/" target="_blank" style="text-decoration: none;color: black;">Preview</a>
                         <i class="fa-solid fa-arrow-right-long"></i>
                         <div class="absolute">                            
                         </div>
@@ -155,7 +155,7 @@
                     </div>
                     <div>
                         <h4>CURRENTLY LEARNING</h4>
-                        <p>I keep learning some technologies to complete my profile, currently i'm working on my problem solving skills and some technologies like git, github, styled components, vite and react testing library</p>
+                        <p>I keep learning some technologies to complete my profile, currently i'm working on my problem solving skills and some technologies like next js, typescript, figma and node js</p>
                     </div>
                 </div>
                 
