--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <p>This is my first freelance project that I'm currently maintaining and actively working on</p>
                     <p class="tags">#Next js #tailwind </p>
                     <div class="relative">
-                        <a href="https://lorestore-carlosmet.vercel.app/" target="_blank" style="text-decoration: none;color: black;">Preview</a>
+                        <a href="https://uniformstore.vercel.app/" target="_blank" style="text-decoration: none;color: black;">Preview</a>
                         <i class="fa-solid fa-arrow-right-long"></i>
                         <div class="absolute">                            
                         </div>
